--- a/lang/terms-dictionary.pot
+++ b/lang/terms-dictionary.pot
@@ -1,20 +1,23 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Terms Dictionary\n"
-"POT-Creation-Date: 2021-04-08 01:25+0300\n"
-"PO-Revision-Date: 2021-04-08 01:27+0300\n"
-"Last-Translator: \n"
-"Language-Team: Somonator\n"
+"POT-Creation-Date: 2021-05-29 12:57+0300\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Somonator\n"
+"Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;"
+"_nx_noop:1,2,3c;esc_attr__;esc_attr_e;esc_html__;esc_html_e\n"
+"X-Poedit-Basepath: ..\n"
 "X-Generator: Poedit 2.4.2\n"
-"X-Poedit-Basepath: D:/Work/local_domains/wordpress/wp-content/plugins/terms-"
-"dictionary\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-KeywordsList: __\n"
 "X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: node_modules\n"
 
 #: dictionary.php:39 dictionary.php:50
 msgid "Dictionary"
@@ -64,67 +67,61 @@ msgstr ""
 msgid "All letters"
 msgstr ""
 
-#: dictionary.php:75
-#, php-format
-msgid "Terms updated. <a href=\"%s\">View</a>"
-msgstr ""
-
 #: dictionary.php:76
-msgid "The parameter is updated."
+msgid "Term updated."
 msgstr ""
 
 #: dictionary.php:77
-msgid "The parameter is remove."
+msgid "The parameter is updated."
 msgstr ""
 
 #: dictionary.php:78
-msgid "Terms is updated"
+msgid "The parameter is removed."
 msgstr ""
 
 #: dictionary.php:79
-#, php-format
-msgid "Terms  restored from the editorial: %s"
+msgid "Term is updated"
 msgstr ""
 
 #: dictionary.php:80
 #, php-format
-msgid "Term published on the website. <a href=\"%s\">View</a>"
+msgid "Terms  restored from the editorial: %s"
 msgstr ""
 
 #: dictionary.php:81
-msgid "Terms saved."
+msgid "Term published on the website."
 msgstr ""
 
 #: dictionary.php:82
-#, php-format
-msgid "Terms submitted for review. <a target=\"_blank\" href=\"%s\">View</a>"
+msgid "Term saved."
 msgstr ""
 
 #: dictionary.php:83
-#, php-format
-msgid ""
-"Scheduled for publication: <strong>%1$s</strong>. <a target=\"_blank\" href="
-"\"%2$s\">View</a>"
-msgstr ""
-
-#: dictionary.php:83
-msgid "M j, Y @ G:i"
+msgid "Term submitted for review."
 msgstr ""
 
 #: dictionary.php:84
 #, php-format
-msgid "Draft updated terms.<a target=\"_blank\" href=\"%s\">View</a>"
+msgid "Scheduled for publication: <strong>%1$s</strong>."
 msgstr ""
 
-#: dictionary.php:95
-msgid "Title"
+#: dictionary.php:84
+msgid "M j, Y @ G:i"
+msgstr ""
+
+#: dictionary.php:85
+msgid "Draft updated terms."
 msgstr ""
 
 #: dictionary.php:96
+msgid "Title"
+msgstr ""
+
+#: dictionary.php:97
 msgid "Letter"
 msgstr ""
 
-#: dictionary.php:153
+#: dictionary.php:154
 msgid "Dictionary Thumbnail"
 msgstr ""
 
